--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/leal32b/template-npmjs#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.1.1"
+    "@types/node": "^17.0.23",
+    "git-commit-msg-linter": "^4.1.1",
+    "typescript": "^4.6.3"
   }
 }
