--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "homepage": "https://github.com/leal32b/template-npmjs#readme",
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "eslint": "^8.13.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.1",
     "typescript": "^4.6.3"
   }
