--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Template to create a new npmjs lib",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint 'src/**' --fix"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.1",
+    "husky": "^4.3.8",
+    "lint-staged": "^12.3.7",
     "typescript": "^4.6.3"
   }
 }
