--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Template to create a new npmjs lib",
   "main": "index.js",
   "scripts": {
-    "eslint": "eslint 'src/**' --fix"
+    "eslint": "eslint 'src/**' --fix",
+    "test": "jest --passWithNoTests --no-cache --runInBand --silent --noStackTrace --collectCoverage=false",
+    "test:verbose": "jest --passWithNoTests --no-cache --runInBand",
+    "test:unit": "npm test -- -c jest-unit.config.js --watch",
+    "test:integration": "npm test -- -c jest-integration.config.js --watch",
+    "test:staged": "npm test -- --findRelatedTests tests",
+    "test:ci": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -17,6 +23,7 @@
   },
   "homepage": "https://github.com/leal32b/template-npmjs#readme",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "eslint": "^8.13.0",
@@ -26,7 +33,9 @@
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^4.3.8",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
 }
