--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "template-npmjs",
   "version": "0.0.1",
   "description": "Template to create a new npmjs lib",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rimraf dist && tsc -b tsconfig.build.json",
     "build:watch": "npm run build -- -w",
     "eslint": "eslint 'src/**' --fix",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run eslint",
+    "preversion" : "npm run eslint",
+    "version" : "npm run eslint && git add -A src",
+    "postversion" : "git push && git push --tags",
     "test": "jest --passWithNoTests --no-cache --runInBand --silent --noStackTrace --collectCoverage=false",
     "test:verbose": "jest --passWithNoTests --no-cache --runInBand",
     "test:unit": "npm test -- -c jest-unit.config.js --watch",
@@ -19,6 +24,7 @@
     "type": "git",
     "url": "git+https://github.com/leal32b/template-npmjs.git"
   },
+  "keywords": ["template", "npmjs"],
   "author": "leal32b",
   "license": "MIT",
   "bugs": {
