--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.1",
-    "husky": "^4.3.8",
+    "husky": "4.3.8",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
     "rimraf": "^3.0.2",
