--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.0.2",
   "description": "Template to create a new npmjs lib",
   "main": "dist/index.js",
+  "engines": {
+    "node": "14.18.3",
+    "npm": "6.14.15"
+  },
   "scripts": {
-    "build": "rimraf dist && tsc -b tsconfig.build.json",
+    "build": "rimraf dist && ttsc -b tsconfig.build.json",
     "build:watch": "npm run build -- -w",
     "eslint": "eslint 'src/**' --fix",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run eslint",
-    "preversion": "npm run eslint",
-    "version": "npm run eslint && git add -A src",
-    "postversion": "git push && git push --tags",
     "test": "jest --passWithNoTests --no-cache --runInBand --silent --noStackTrace --collectCoverage=false",
     "test:verbose": "jest --passWithNoTests --no-cache --runInBand",
-    "test:unit": "npm test -- -c jest-unit.config.js --watch",
-    "test:integration": "npm test -- -c jest-integration.config.js --watch",
+    "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests tests",
     "test:ci": "npm test -- --coverage"
   },
@@ -51,6 +49,8 @@
     "lint-staged": "^12.3.7",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "ttypescript": "^1.5.13",
+    "typescript": "^4.6.3",
+    "typescript-transform-paths": "^3.3.1"
   }
 }
