--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,8 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run: npm run build
+      - codecov/upload:
+          file: './coverage/clover.xml'
       - persist_to_workspace:
           root: ~/repo
           paths:
