--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "template-npmjs",
-  "version": "0.0.3",
+  "version": "0.0.12",
   "description": "Template to create a new npmjs lib",
   "main": "dist/index.js",
   "engines": {
@@ -11,6 +11,8 @@
     "build": "rimraf dist && ttsc -b tsconfig.build.json",
     "build:watch": "npm run build -- -w",
     "eslint": "eslint 'src/**' --fix",
+    "presetup": "npm i chalk@4.1.2 shelljs compare-versions inquirer rimraf --no-save",
+    "setup": "node ./.template-npmjs/scripts/setup.js",
     "test": "jest --passWithNoTests --no-cache --runInBand --silent --noStackTrace --collectCoverage=false",
     "test:verbose": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
@@ -18,7 +20,7 @@
     "test:ci": "npm test -- --coverage"
   },
   "files": [
-    "dist/**/*"
+    "dist"
   ],
   "repository": {
     "type": "git",
@@ -26,7 +28,19 @@
   },
   "keywords": [
     "template",
-    "npmjs"
+    "lib",
+    "module",
+    "typescript",
+    "eslint",
+    "standardjs",
+    "git-commit-msg-linter",
+    "husky",
+    "lint-staged",
+    "jest",
+    "npmjs",
+    "codecov",
+    "circleci",
+    "shields"
   ],
   "author": "leal32b",
   "license": "MIT",
